Add Volume control for each tab

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,31 @@
 {
-    "manifest_version": 3,
-    "name": "Silent Tabs",
-    "version": "1.0",
-    "description": "Mute individual tabs in Chrome",
-    "permissions": ["tabs"],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "48": "icon48.png",
-        "128": "icon128.png"
-      }
-    },
-    "icons": {
-      "48": "icon48.png",
-      "128": "icon128.png"
+  "manifest_version": 3,
+  "name": "Silent Tabs",
+  "version": "1.0",
+  "description": "Mute and control volume of tabs",
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "scripting"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
+}
